fix: chat box spacing for popup

--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -63,12 +63,10 @@
           object-fit: cover;
         }
       }
-
       .close {
         cursor: pointer;
       }
     }
-
     .center {
       height: 350px;
       overflow: scroll;
@@ -87,13 +85,12 @@
 
         span {
           font-size: 12px;
-          background-color: #f7c14b85;
+          background-color: #f7c14b39;
           padding: 2px;
           border-radius: 5px;
         }
       }
     }
-
     .bottom {
       border-top: 2px solid #f7c14b85;
       height: 60px;
